@@ -1,16 +1,16 @@
 Package: MBmca
 Type: Package
 Title: Nucleic Acid Melting Curve Analysis on Microbead Surfaces with R
-Version: 0.0.3-3
+Version: 0.0.3-4
 LazyData: true
 Depends: R (>= 3.0.0), robustbase (>= 0.9), chipPCR (>= 0.0.7)
-Date: 2014-06-25
+Date: 2014-08-17
 Author: Stefan Roediger
 Maintainer: Stefan Roediger <stefan_roediger@gmx.de>
 Description: The MBmca package provides data sets and lightweight utilities for nucleic acid melting curve analysis and presentation on microbead surfaces.
 License: GPL (>= 2)
 URL: http://www.r-project.org
-Packaged: 2014-06-25 13:37:39 UTC; tux
+Packaged: 2014-08-25 13:39:05 UTC; michal
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-06-25 17:34:25
+Date/Publication: 2014-08-26 09:34:30
