@@ -1,9 +1,9 @@
-0f4d88458e608647f7d0bbea08988ba6 *CHANGELOG
-8e284291fcae0b901f0e3d17e3f7a9c6 *DESCRIPTION
+9614747b7dad21b3c5cea90c029b2da5 *CHANGELOG
+6af2b27b345e0e1bbf15e03d202016c2 *DESCRIPTION
 37f50d8e0799d149a7ad250b5229130c *NAMESPACE
 a3620336ba34c207b4682eee1d4e92ee *R/MFIerror.R
-6142fb5aae16c1808ca68d39caa59556 *R/diffQ.R
-e7905cc8f8144b62e74b81f91c3850e6 *R/diffQ2.R
+b460d1f33c99e626ea2511f80f5d46a2 *R/diffQ.R
+52540ff686dbd900d6083e862080f73f *R/diffQ2.R
 aeb496605defcc9960455c2c74b2dd61 *R/mcaPeaks.R
 6548fe3fb0e58ef17077366d7e684476 *R/mcaSmoother.R
 380e48e3fc1108379d48c6e3a5082b53 *data/DMP.rda
@@ -11,10 +11,10 @@ aeb496605defcc9960455c2c74b2dd61 *R/mcaPeaks.R
 8f4c31d8122be661db159b31f8e7af10 *data/MultiMelt.rda
 623eadd7f57af37432f13da3446cd06e *man/DMP.Rd
 eca49e815ea22226d52c5188bbefb809 *man/DualHyb.Rd
-621d9830fce4a13a489d3629f42e3226 *man/MBmca-package.Rd
+39a6257821f8f83ea4c1ce514d7b3115 *man/MBmca-package.Rd
 809daa1b330b30272cadaef678318f3c *man/MFIerror.Rd
 1f4b71acf64dbbb67d85904a40a53729 *man/MultiMelt.Rd
-3a4937bd6eeaa8dbf1725aecd3776f88 *man/diffQ.Rd
-2e22b5242ecd32f3df8fe9e1c887c4a8 *man/diffQ2.Rd
+82324432d07d0b94e81475bad059f3b7 *man/diffQ.Rd
+abcec5161a7eaa299e274328614c33dd *man/diffQ2.Rd
 66f8130c41daaf798a8a2f4084beecac *man/mcaPeaks.Rd
 1091c5f99dcec23e4cf3bea563056240 *man/mcaSmoother.Rd
